--- a/style.css
+++ b/style.css
@@ -15,15 +15,23 @@ body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
   background-color: #222;
+  width: 100%;
+  height: 100vh;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .description {
   text-align: center;
-  margin: 120px 0;
+  padding-top: 120px;
+  margin-bottom: 100px;
 }
 
-.container {
-  height: 65vh;
+.wrapper {
+  height: 50vh;
   color: #eee;
   display: flex;
   align-items: center;
@@ -39,8 +47,8 @@ body {
   background: #eee;
   color: #333;
   font-size: 6rem;
-  min-width: 15rem;
-  padding: 3rem 0rem;
+  max-width: 20rem;
+  padding: 3rem 4rem;
   text-align: center;
   position: absolute;
   left: 50%;
@@ -57,19 +65,19 @@ body {
   padding: 2.5rem;
   text-align: center;
   display: block;
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
 }
 
 .control {
-  width: 52rem;
+  max-width: 52rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  max-height: 5rem;
 }
 
 .info {
-  width: 52rem;
+  max-width: 52rem;
   font-size: 2rem;
 }
 
@@ -80,6 +88,7 @@ h1 {
 
 .between {
   font-size: 1.5rem;
+  margin-bottom: 5rem;
 }
 
 .btn {
@@ -97,20 +106,21 @@ h1 {
 }
 
 .message {
-  margin-bottom: 8rem;
-  height: 3rem;
+  font-size: 2rem;
 }
 
 .answer {
   margin-bottom: 3rem;
+  display: block;
 }
 .label-score {
   margin-bottom: 2rem;
 }
 
 @media (max-width: 600px) {
-  .description {
-    margin: 20px 0 80px;
+  .container {
+    padding: 10px;
+    margin: 0 0 20px;
   }
 
   h1 {
@@ -120,6 +130,7 @@ h1 {
 
   .between {
     font-size: 1.2rem;
+    margin-bottom: 2rem;
   }
 
   .number {
@@ -128,22 +139,22 @@ h1 {
     padding: 2rem 0rem;
   }
 
-  .container {
+  .wrapper {
     flex-direction: column;
     margin-top: 30px;
   }
 
   .guess {
-    max-width: 30rem;
+    max-width: 20rem;
     font-size: 3rem;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
   }
 
   .btn {
     font-size: 1.5rem;
-    padding: 2rem 2.6rem;
+    padding: 2rem 1.5rem;
   }
 
   .info {
@@ -152,6 +163,10 @@ h1 {
   }
 
   .message {
-    margin-bottom: 3rem;
+    margin: 4rem 0;
+    font-size: 1.5rem;
+  }
+  .answer {
+    margin-bottom: 1rem;
   }
 }
