--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@ body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
   background-color: #222;
-  width: 100%;
-  height: 100vh;
 }
 
 .container {
@@ -32,7 +30,6 @@ body {
 
 .wrapper {
   height: 50vh;
-  color: #eee;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -47,7 +44,6 @@ body {
   background: #eee;
   color: #333;
   font-size: 6rem;
-  max-width: 20rem;
   padding: 3rem 4rem;
   text-align: center;
   position: absolute;
@@ -69,7 +65,6 @@ body {
 }
 
 .control {
-  max-width: 52rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,7 +72,6 @@ body {
 }
 
 .info {
-  max-width: 52rem;
   font-size: 2rem;
 }
 
@@ -158,7 +152,7 @@ h1 {
   }
 
   .info {
-    text-align: center;
+    margin-top: 2rem;
     font-size: 1.5rem;
   }
 
