buttons add margin

--- a/style.css
+++ b/style.css
@@ -156,6 +156,10 @@ h1 {
     font-size: 1.5rem;
   }
 
+  .buttons {
+    margin-bottom: 2rem;
+  }
+
   .message {
     margin: 4rem 0;
     font-size: 1.5rem;
